Fix mobile layout issues

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
   height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -11,9 +13,14 @@ body {
     rgba(2, 0, 36, 1) 0%,
     rgba(37, 54, 82, 1) 55%
   );
+  overflow: hidden;
 }
 
 .calculator-body {
+  height: 80%;
+  min-height: 450px;
+  width: 28%;
+  min-width: 300px;
   background: rgb(89, 192, 158);
   background: linear-gradient(
     317deg,
@@ -37,30 +44,30 @@ body {
 
 .calculator-display {
   background-color: #f5f5dc95;
-  height: 125px;
+  height: 18%;
   grid-column: 1 / 5;
   justify-content: right;
   align-items: center;
   font-size: 50px;
   font-weight: 300;
-  padding-right: 25px;
-}
-
-.calculator-display-long {
+  padding: 0 25px;
+  margin-bottom: 20px;
   overflow-x: scroll;
-  overflow-y: hidden;
 }
 
 .calculator-buttons {
+  height: 78%;
+  width: 100%;
   display: grid;
   gap: 20px;
-  grid-template-columns: 100px 100px 100px 100px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
 }
 
 .calculator-button {
   font-size: 35px;
   font-weight: 200;
-  height: 100px;
+  /* height: 100px; */
   background-color: #f5f5dc60;
   justify-content: center;
   align-items: center;
@@ -86,12 +93,12 @@ body {
   grid-column: 1/3;
 }
 
-.calculator-display-long::-webkit-scrollbar {
+/* 
+.calculator-display::-webkit-scrollbar {
   display: none;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-.calculator-display-long {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+.calculator-display {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+} */
